force-app/main/default/objects/Turn__c/fields/Turn_Work_Authorization_Amount_old__c.field-meta.xml
<CustomField>
    <fullName>Turn_Work_Authorization_Amount_old__c</fullName>
    <label>Turn Work Authorization Amount old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>