force-app/main/default/objects/Turn__c/fields/Turn_Work_Authorization_Form__c.field-meta.xml
<CustomField>
    <fullName>Turn_Work_Authorization_Form__c</fullName>
    <label>Turn Work Authorization Form</label>
    <type>Url</type>
</CustomField>