force-app/main/default/objects/Turn__c/fields/Turn_Work_Authorization_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Turn_Work_Authorization_Signed_Date__c</fullName>
    <label>Turn Work Authorization Signed Date</label>
    <type>Date</type>
</CustomField>