force-app/main/default/objects/Turn__c/fields/Turn_Work_Authorization_Text__c.field-meta.xml
<CustomField>
    <fullName>Turn_Work_Authorization_Text__c</fullName>
    <formula>SUBSTITUTE(Turn_Work_Authorization_Form__c, &quot;https://hudsonhomesmgmt.quip.com/&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Work Authorization Text</label>
    <type>Text</type>
</CustomField>