force-app/main/default/objects/Turn__c/fields/Turns_Team__c.field-meta.xml
<CustomField>
    <fullName>Turns_Team__c</fullName>
    <formula>IF(CONTAINS(&quot;NJ:NY:PA:MD:CT:MA:DE:RI:DC&quot;,Property_State__c),&quot;Team 1&quot;,
IF(CONTAINS(&quot;FL:IL:OH:NC:GA:TX:NM:IN:SC:OK:TN:AZ&quot;,Property_State__c),&quot;Team 2&quot;,Null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turns Team</label>
    <type>Text</type>
</CustomField>