force-app/main/default/objects/Turn__c/fields/Vacant_Properties_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Properties_Contact__c</fullName>
    <defaultValue>&apos;vacantproperties@hudsonhomesmgmt.com&apos;</defaultValue>
    <label>Vacant Properties Contact</label>
    <type>Email</type>
</CustomField>