force-app/main/default/objects/Turn__c/fields/Warranty_Change_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Change_Order_Form__c</fullName>
    <label>Warranty Change Order Form</label>
    <type>Url</type>
</CustomField>