force-app/main/default/objects/Turn__c/fields/Warranty_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Issued_Date__c</fullName>
    <label>Warranty Issued Date</label>
    <type>Date</type>
</CustomField>