force-app/main/default/objects/Turn__c/fields/Warranty_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Signed_Date__c</fullName>
    <label>Warranty Signed Date</label>
    <type>Date</type>
</CustomField>