force-app/main/default/objects/Turn__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <label>Water</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>