force-app/main/default/objects/Turn__c/fields/Water_Activated__c.field-meta.xml
<CustomField>
    <fullName>Water_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Activated</label>
    <type>Checkbox</type>
</CustomField>