force-app/main/default/objects/Turn__c/fields/Water_Meter__c.field-meta.xml
<CustomField>
    <fullName>Water_Meter__c</fullName>
    <label>Water Meter #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>