force-app/main/default/objects/Turn__c/fields/Water_Provider__c.field-meta.xml
<CustomField>
    <fullName>Water_Provider__c</fullName>
    <label>Water Provider</label>
    <type>TextArea</type>
</CustomField>