force-app/main/default/objects/Turn__c/fields/Water_Quality_Inspection_Complete__c.field-meta.xml
<CustomField>
    <fullName>Water_Quality_Inspection_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Quality: Inspection Complete</label>
    <type>Checkbox</type>
</CustomField>