force-app/main/default/objects/Turn__c/fields/Water_Quality_Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>Water_Quality_Inspection_Result__c</fullName>
    <label>Water Quality: Inspection Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>