force-app/main/default/objects/Turn__c/fields/Water_Quality_Remediated__c.field-meta.xml
<CustomField>
    <fullName>Water_Quality_Remediated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Quality: Remediated</label>
    <type>Checkbox</type>
</CustomField>