force-app/main/default/objects/Turn__c/fields/Water_Service_Municipal__c.field-meta.xml
<CustomField>
    <fullName>Water_Service_Municipal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Service: Municipal</label>
    <type>Checkbox</type>
</CustomField>