force-app/main/default/objects/Turn__c/fields/Water_Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Water_Service_Notes__c</fullName>
    <label>Water Service: Notes</label>
    <type>TextArea</type>
</CustomField>