force-app/main/default/objects/Turn__c/fields/Water_Service_Well__c.field-meta.xml
<CustomField>
    <fullName>Water_Service_Well__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Service: Well</label>
    <type>Checkbox</type>
</CustomField>