force-app/main/default/objects/Turn__c/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <label>Well</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>