force-app/main/default/objects/Turn__c/fields/Well_Category__c.field-meta.xml
<CustomField>
    <fullName>Well_Category__c</fullName>
    <label>Well Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>