force-app/main/default/objects/Turn__c/fields/Wells_Maintenance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Wells_Maintenance_Due_Date__c</fullName>
    <label>Wells Maintenance Due Date</label>
    <type>Date</type>
</CustomField>