force-app/main/default/objects/Turn__c/fields/Work_Authorization_Signed_Date_GC__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Signed_Date_GC__c</fullName>
    <label>Work Authorization Signed Date - GC</label>
    <type>Date</type>
</CustomField>