force-app/main/default/objects/Turn__c/recordTypes/Disposition_Turn_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Disposition_Turn_Read_Only</fullName>
    <active>true</active>
    <label>Disposition Turn - Read Only</label>
</RecordType>