force-app/main/default/objects/Turn__c/recordTypes/Disposition_Turn_Read_Write.recordType-meta.xml
<RecordType>
    <fullName>Disposition_Turn_Read_Write</fullName>
    <active>true</active>
    <label>Disposition Turn - Read/Write</label>
</RecordType>