force-app/main/default/objects/Turn__c/recordTypes/Turn_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Turn_Read_Only</fullName>
    <active>true</active>
    <description>Turn Record Type with Read Only access</description>
    <label>Turn - Read Only</label>
</RecordType>