force-app/main/default/objects/Turn__c/recordTypes/Turn_Read_Write.recordType-meta.xml
<RecordType>
    <fullName>Turn_Read_Write</fullName>
    <active>true</active>
    <description>Turn Record Type with Read/Write access</description>
    <label>Turn - Read/Write</label>
</RecordType>