force-app/main/default/objects/Turn__c/validationRules/Approved_Change_Ordered_entered_Twice.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Change_Ordered_entered_Twice</fullName>
    <active>false</active>
    <description>Approved Change Order amount should not be entered Twice</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Turn_Approved_Change_Order_Amount__c),
NOT(ISBLANK(TEXT(PRIORVALUE(Turn_Approved_Change_Order_Amount__c)))))
||
AND(
NOT(ISNEW()),
ISCHANGED(Turn_Approved_Change_Order_2_Amount__c),
NOT(ISBLANK(TEXT(PRIORVALUE(Turn_Approved_Change_Order_2_Amount__c)))))
||
AND(
NOT(ISNEW()),
ISCHANGED(Turn_Approved_Change_Order_3_Amount__c),
NOT(ISBLANK(TEXT(PRIORVALUE(Turn_Approved_Change_Order_3_Amount__c)))))
||
AND(
NOT(ISNEW()),
ISCHANGED(Approved_Warranty_Change_Order_Amount__c),
NOT(ISBLANK(TEXT(PRIORVALUE(Approved_Warranty_Change_Order_Amount__c)))))</errorConditionFormula>
    <errorMessage>Approved Change Order Amount cannot be changed after the first Input. Please contact the System Admin.</errorMessage>
</ValidationRule>