force-app/main/default/objects/Turn__c/validationRules/Validation_for_Invoke_Warranty.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Invoke_Warranty</fullName>
    <active>false</active>
    <description>User should not be able to Invoke Warranty before the Work Authorization form is created</description>
    <errorConditionFormula>AND(OR(doCreateVF__c = false, Create_Reviewer_Form__c = False, Create_Work_Authorization_Form__c = false),Punch_List_Checked__c = true)</errorConditionFormula>
    <errorMessage>Please make sure a Work Authorization and Change Order Form 1 is created before you invoke warranty. Please do  this by clicking the &quot;Create Turn Work Authorization&quot; button.</errorMessage>
</ValidationRule>