force-app/main/default/objects/Turn__c/validationRules/Validation_for_Reviewer_and_WA_Forms.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Reviewer_and_WA_Forms</fullName>
    <active>false</active>
    <description>User should not be able to create WA form till they have created a Reviewer form</description>
    <errorConditionFormula>AND(OR(Create_Work_Authorization_Form__c= true),Create_Reviewer_Form__c = False)</errorConditionFormula>
    <errorMessage>Please assign a Turn Reviewer before creating a Work Authorization Form. Click on the “Assign Turn Reviewer” button to proceed forward.</errorMessage>
</ValidationRule>