force-app/main/default/objects/Turn__c/validationRules/Validation_for_WAF_and_Approval_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_WAF_and_Approval_Process</fullName>
    <active>false</active>
    <errorConditionFormula>AND (Create_Work_Authorization_Form__c = TRUE,(ISBLANK(Turn_Recommendation__c)))</errorConditionFormula>
    <errorMessage>Please submit the Turn Recommendation Amount for Approval before issuing a WAF.</errorMessage>
</ValidationRule>