force-app/main/default/objects/Turn__c/validationRules/Validation_to_avoid_multiple_WOLI.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_to_avoid_multiple_WOLI</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(Turn_Stage__c),
CASE(Turn_Stage__c ,
&quot;Turn WAF Created&quot;,1,
&quot;Turn In Progress&quot;,2,
&quot;Turn Complete&quot;,3,
&quot;Canceled&quot;,4,
0 )
&lt;
CASE(PRIORVALUE(Turn_Stage__c) ,
&quot;Turn WAF Created&quot;,1,
&quot;Turn In Progress&quot;,2,
&quot;Turn Complete&quot;,3,
&quot;Canceled&quot;,0,
0)
)</errorConditionFormula>
    <errorMessage>Please reach out to the System Admin in order to the stage back.</errorMessage>
</ValidationRule>